add terminate server button

--- a/projectClient.html
+++ b/projectClient.html
@@ -38,6 +38,10 @@
             <button class = 'arduinoControl' value = 'stop'>Stop Arduino</button>
             <button class = 'arduinoControl' value = 'open'>Open Arduino</button>
         </div>
+        <div>
+            Terminate Arduino:
+            <button class = 'terminate'>Terminate Arduino</button>
+        </div>
         <script src="projectClient.js"></script>
         <!-- <a href="http://localhost:1306/temp">Click me</a> -->
 </body>
