--- a/projectClient.html
+++ b/projectClient.html
@@ -50,33 +50,33 @@
             <hr>
             <div>
                 Switching Temperature Units
-                <div>
+<!--                 <div>
                     <input type="radio" name="unit-switch" class = 'unitsControl' value = 'celsius' checked>
                     <label>Celsius</label>
                     <input type="radio" name="unit-switch" class = 'unitsControl' value = 'farenheit'>
                     <label>Farenheit</label>
-                </div>
-                    <!-- <button class = 'unitsControl' value = 'celsius'>Celsius</button>
-                    <button class = 'unitsControl' value = 'farenheit'>Farenheit</button> -->
+                </div> -->
+                    <button class = 'unitsControl' value = 'celsius'>Celsius</button>
+                    <button class = 'unitsControl' value = 'farenheit'>Farenheit</button>
             </div>
             <hr>
             <div>
                 Stop updating temperature:
-                <div>
+<!--                 <div>
                     <input type="radio" name="stop" class = 'arduinoControl' value = 'stop' checked>
                     <label>Stop Arduino</label>
                     <input type="radio" name="stop" class = 'arduinoControl' value = 'open'>
                     <label>Open Arduino</label>
-                </div>
-               <!--  <button class = 'arduinoControl' value = 'stop'>Stop Arduino</button>
-                <button class = 'arduinoControl' value = 'open'>Open Arduino</button> -->
+                </div> -->
+                <button class = 'arduinoControl' value = 'stop'>Stop Arduino</button>
+                <button class = 'arduinoControl' value = 'open'>Open Arduino</button>
             </div>
             <hr>
             <div>
                 Wind chill temperature:
                 <input type="text" id="windSpeed" placeholder="wind speed /mph" />
                 <button id="getWindChillTemperatureButton" class="btn btn-primary">get wind chill temperature</button>
-                <span id="showWindChillTemperature"></span> <span class = 'unit'></span>
+                <span id="showWindChillTemperature"></span>
             </div>
             <hr>
             <div>
