add terminate button

--- a/projectClient.html
+++ b/projectClient.html
@@ -71,6 +71,10 @@
                 <button class = 'arduinoControl' value = 'stop'>Stop Arduino</button>
                 <button class = 'arduinoControl' value = 'open'>Open Arduino</button>
             </div>
+            <div>
+                Terminate Arduino:
+                <button class = 'terminate'>Terminate Arduino</button>
+            </div>
             <hr>
             <div>
                 Wind chill temperature:
